# winput-stuffer

./: Cargo.toml  README.md
examples/: emoji_copypasta.rs  many_lines.rs  send_some_input.rs  switch_apps.rs
src/: actual_os_string.rs  input.rs  layout.rs  lib.rs  send.rs  window_message.rs
src/layout/: maps.rs  mod.rs
