[package]
name = "winput-stuffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = [ "macros" ] }
bimap = "0.6.2"

[dependencies.windows]
version = "0.35"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
]

[features]
all = [
    "windows/deprecated",
    #"windows/alloc",
    "windows/implement",
    "windows/interface",
    "windows/AI",
    "windows/AI_MachineLearning",
    "windows/AI_MachineLearning_Preview",
    "windows/ApplicationModel",
    "windows/ApplicationModel_Activation",
    "windows/ApplicationModel_AppExtensions",
    "windows/ApplicationModel_AppService",
    "windows/ApplicationModel_Appointments",
    "windows/ApplicationModel_Appointments_AppointmentsProvider",
    "windows/ApplicationModel_Appointments_DataProvider",
    "windows/ApplicationModel_Background",
    "windows/ApplicationModel_Calls",
    "windows/ApplicationModel_Calls_Background",
    "windows/ApplicationModel_Calls_Provider",
    "windows/ApplicationModel_Chat",
    "windows/ApplicationModel_CommunicationBlocking",
    "windows/ApplicationModel_Contacts",
    "windows/ApplicationModel_Contacts_DataProvider",
    "windows/ApplicationModel_Contacts_Provider",
    "windows/ApplicationModel_ConversationalAgent",
    "windows/ApplicationModel_Core",
    "windows/ApplicationModel_DataTransfer",
    "windows/ApplicationModel_DataTransfer_DragDrop",
    "windows/ApplicationModel_DataTransfer_DragDrop_Core",
    "windows/ApplicationModel_DataTransfer_ShareTarget",
    "windows/ApplicationModel_Email",
    "windows/ApplicationModel_Email_DataProvider",
    "windows/ApplicationModel_ExtendedExecution",
    "windows/ApplicationModel_ExtendedExecution_Foreground",
    "windows/ApplicationModel_Holographic",
    "windows/ApplicationModel_LockScreen",
    "windows/ApplicationModel_Payments",
    "windows/ApplicationModel_Payments_Provider",
    "windows/ApplicationModel_Preview",
    "windows/ApplicationModel_Preview_Holographic",
    "windows/ApplicationModel_Preview_InkWorkspace",
    "windows/ApplicationModel_Preview_Notes",
    "windows/ApplicationModel_Resources",
    "windows/ApplicationModel_Resources_Core",
    "windows/ApplicationModel_Resources_Management",
    "windows/ApplicationModel_Search",
    "windows/ApplicationModel_Search_Core",
    "windows/ApplicationModel_SocialInfo",
    "windows/ApplicationModel_SocialInfo_Provider",
    "windows/ApplicationModel_Store",
    "windows/ApplicationModel_Store_LicenseManagement",
    "windows/ApplicationModel_Store_Preview",
    "windows/ApplicationModel_Store_Preview_InstallControl",
    "windows/ApplicationModel_UserActivities",
    "windows/ApplicationModel_UserActivities_Core",
    "windows/ApplicationModel_UserDataAccounts",
    "windows/ApplicationModel_UserDataAccounts_Provider",
    "windows/ApplicationModel_UserDataAccounts_SystemAccess",
    "windows/ApplicationModel_UserDataTasks",
    "windows/ApplicationModel_UserDataTasks_DataProvider",
    "windows/ApplicationModel_VoiceCommands",
    "windows/ApplicationModel_Wallet",
    "windows/ApplicationModel_Wallet_System",
    "windows/Data",
    "windows/Data_Html",
    "windows/Data_Json",
    "windows/Data_Pdf",
    "windows/Data_Text",
    "windows/Data_Xml",
    "windows/Data_Xml_Dom",
    "windows/Data_Xml_Xsl",
    "windows/Devices",
    "windows/Devices_Adc",
    "windows/Devices_Adc_Provider",
    "windows/Devices_AllJoyn",
    "windows/Devices_Background",
    "windows/Devices_Bluetooth",
    "windows/Devices_Bluetooth_Advertisement",
    "windows/Devices_Bluetooth_Background",
    "windows/Devices_Bluetooth_GenericAttributeProfile",
    "windows/Devices_Bluetooth_Rfcomm",
    "windows/Devices_Custom",
    "windows/Devices_Display",
    "windows/Devices_Display_Core",
    "windows/Devices_Enumeration",
    "windows/Devices_Enumeration_Pnp",
    "windows/Devices_Geolocation",
    "windows/Devices_Geolocation_Geofencing",
    "windows/Devices_Gpio",
    "windows/Devices_Gpio_Provider",
    "windows/Devices_Haptics",
    "windows/Devices_HumanInterfaceDevice",
    "windows/Devices_I2c",
    "windows/Devices_I2c_Provider",
    "windows/Devices_Input",
    "windows/Devices_Input_Preview",
    "windows/Devices_Lights",
    "windows/Devices_Lights_Effects",
    "windows/Devices_Midi",
    "windows/Devices_Perception",
    "windows/Devices_Perception_Provider",
    "windows/Devices_PointOfService",
    "windows/Devices_PointOfService_Provider",
    "windows/Devices_Portable",
    "windows/Devices_Power",
    "windows/Devices_Printers",
    "windows/Devices_Printers_Extensions",
    "windows/Devices_Pwm",
    "windows/Devices_Pwm_Provider",
    "windows/Devices_Radios",
    "windows/Devices_Scanners",
    "windows/Devices_Sensors",
    "windows/Devices_Sensors_Custom",
    "windows/Devices_SerialCommunication",
    "windows/Devices_SmartCards",
    "windows/Devices_Sms",
    "windows/Devices_Spi",
    "windows/Devices_Spi_Provider",
    "windows/Devices_Usb",
    "windows/Devices_WiFi",
    "windows/Devices_WiFiDirect",
    "windows/Devices_WiFiDirect_Services",
    "windows/Embedded",
    "windows/Embedded_DeviceLockdown",
    "windows/Foundation",
    "windows/Foundation_Collections",
    "windows/Foundation_Diagnostics",
    "windows/Foundation_Metadata",
    "windows/Foundation_Numerics",
    "windows/Gaming",
    "windows/Gaming_Input",
    "windows/Gaming_Input_Custom",
    "windows/Gaming_Input_ForceFeedback",
    "windows/Gaming_Input_Preview",
    "windows/Gaming_Preview",
    "windows/Gaming_Preview_GamesEnumeration",
    "windows/Gaming_UI",
    "windows/Gaming_XboxLive",
    "windows/Gaming_XboxLive_Storage",
    "windows/Globalization",
    "windows/Globalization_Collation",
    "windows/Globalization_DateTimeFormatting",
    "windows/Globalization_Fonts",
    "windows/Globalization_NumberFormatting",
    "windows/Globalization_PhoneNumberFormatting",
    "windows/Graphics",
    "windows/Graphics_Capture",
    "windows/Graphics_DirectX",
    "windows/Graphics_DirectX_Direct3D11",
    "windows/Graphics_Display",
    "windows/Graphics_Display_Core",
    "windows/Graphics_Effects",
    "windows/Graphics_Holographic",
    "windows/Graphics_Imaging",
    "windows/Graphics_Printing",
    "windows/Graphics_Printing_OptionDetails",
    "windows/Graphics_Printing_PrintSupport",
    "windows/Graphics_Printing_PrintTicket",
    "windows/Graphics_Printing_Workflow",
    "windows/Graphics_Printing3D",
    "windows/Management",
    "windows/Management_Core",
    "windows/Management_Deployment",
    "windows/Management_Deployment_Preview",
    "windows/Management_Policies",
    "windows/Management_Update",
    "windows/Management_Workplace",
    "windows/Media",
    "windows/Media_AppBroadcasting",
    "windows/Media_AppRecording",
    "windows/Media_Audio",
    "windows/Media_Capture",
    "windows/Media_Capture_Core",
    "windows/Media_Capture_Frames",
    "windows/Media_Casting",
    "windows/Media_ClosedCaptioning",
    "windows/Media_ContentRestrictions",
    "windows/Media_Control",
    "windows/Media_Core",
    "windows/Media_Core_Preview",
    "windows/Media_Devices",
    "windows/Media_Devices_Core",
    "windows/Media_DialProtocol",
    "windows/Media_Editing",
    "windows/Media_Effects",
    "windows/Media_FaceAnalysis",
    "windows/Media_Import",
    "windows/Media_MediaProperties",
    "windows/Media_Miracast",
    "windows/Media_Ocr",
    "windows/Media_PlayTo",
    "windows/Media_Playback",
    "windows/Media_Playlists",
    "windows/Media_Protection",
    "windows/Media_Protection_PlayReady",
    "windows/Media_Render",
    "windows/Media_SpeechRecognition",
    "windows/Media_SpeechSynthesis",
    "windows/Media_Streaming",
    "windows/Media_Streaming_Adaptive",
    "windows/Media_Transcoding",
    "windows/Networking",
    "windows/Networking_BackgroundTransfer",
    "windows/Networking_Connectivity",
    "windows/Networking_NetworkOperators",
    "windows/Networking_Proximity",
    "windows/Networking_PushNotifications",
    "windows/Networking_ServiceDiscovery",
    "windows/Networking_ServiceDiscovery_Dnssd",
    "windows/Networking_Sockets",
    "windows/Networking_Vpn",
    "windows/Networking_XboxLive",
    "windows/Perception",
    "windows/Perception_Automation",
    "windows/Perception_Automation_Core",
    "windows/Perception_People",
    "windows/Perception_Spatial",
    "windows/Perception_Spatial_Preview",
    "windows/Perception_Spatial_Surfaces",
    "windows/Phone",
    "windows/Phone_ApplicationModel",
    "windows/Phone_Devices",
    "windows/Phone_Devices_Notification",
    "windows/Phone_Devices_Power",
    "windows/Phone_Management",
    "windows/Phone_Management_Deployment",
    "windows/Phone_Media",
    "windows/Phone_Media_Devices",
    "windows/Phone_Notification",
    "windows/Phone_Notification_Management",
    "windows/Phone_PersonalInformation",
    "windows/Phone_PersonalInformation_Provisioning",
    "windows/Phone_Speech",
    "windows/Phone_Speech_Recognition",
    "windows/Phone_StartScreen",
    "windows/Phone_System",
    "windows/Phone_System_Power",
    "windows/Phone_System_Profile",
    "windows/Phone_System_UserProfile",
    "windows/Phone_System_UserProfile_GameServices",
    "windows/Phone_System_UserProfile_GameServices_Core",
    "windows/Phone_UI",
    "windows/Phone_UI_Input",
    "windows/Security",
    "windows/Security_Authentication",
    "windows/Security_Authentication_Identity",
    "windows/Security_Authentication_Identity_Core",
    "windows/Security_Authentication_Identity_Provider",
    "windows/Security_Authentication_OnlineId",
    "windows/Security_Authentication_Web",
    "windows/Security_Authentication_Web_Core",
    "windows/Security_Authentication_Web_Provider",
    "windows/Security_Authorization",
    "windows/Security_Authorization_AppCapabilityAccess",
    "windows/Security_Credentials",
    "windows/Security_Credentials_UI",
    "windows/Security_Cryptography",
    "windows/Security_Cryptography_Certificates",
    "windows/Security_Cryptography_Core",
    "windows/Security_Cryptography_DataProtection",
    "windows/Security_DataProtection",
    "windows/Security_EnterpriseData",
    "windows/Security_ExchangeActiveSyncProvisioning",
    "windows/Security_Isolation",
    "windows/Services",
    "windows/Services_Cortana",
    "windows/Services_Maps",
    "windows/Services_Maps_Guidance",
    "windows/Services_Maps_LocalSearch",
    "windows/Services_Maps_OfflineMaps",
    "windows/Services_Store",
    "windows/Services_TargetedContent",
    "windows/Storage",
    "windows/Storage_AccessCache",
    "windows/Storage_BulkAccess",
    "windows/Storage_Compression",
    "windows/Storage_FileProperties",
    "windows/Storage_Pickers",
    "windows/Storage_Pickers_Provider",
    "windows/Storage_Provider",
    "windows/Storage_Search",
    "windows/Storage_Streams",
    "windows/System",
    "windows/System_Diagnostics",
    "windows/System_Diagnostics_DevicePortal",
    "windows/System_Diagnostics_Telemetry",
    "windows/System_Diagnostics_TraceReporting",
    "windows/System_Display",
    "windows/System_Implementation",
    "windows/System_Implementation_FileExplorer",
    "windows/System_Inventory",
    "windows/System_Power",
    "windows/System_Power_Diagnostics",
    "windows/System_Preview",
    "windows/System_Profile",
    "windows/System_Profile_SystemManufacturers",
    "windows/System_RemoteDesktop",
    "windows/System_RemoteDesktop_Input",
    "windows/System_RemoteSystems",
    "windows/System_Threading",
    "windows/System_Threading_Core",
    "windows/System_Update",
    "windows/System_UserProfile",
    "windows/UI",
    "windows/UI_Accessibility",
    "windows/UI_ApplicationSettings",
    "windows/UI_Composition",
    "windows/UI_Composition_Core",
    "windows/UI_Composition_Desktop",
    "windows/UI_Composition_Diagnostics",
    "windows/UI_Composition_Effects",
    "windows/UI_Composition_Interactions",
    "windows/UI_Composition_Scenes",
    "windows/UI_Core",
    "windows/UI_Core_AnimationMetrics",
    "windows/UI_Core_Preview",
    "windows/UI_Input",
    "windows/UI_Input_Core",
    "windows/UI_Input_Inking",
    "windows/UI_Input_Inking_Analysis",
    "windows/UI_Input_Inking_Core",
    "windows/UI_Input_Inking_Preview",
    "windows/UI_Input_Preview",
    "windows/UI_Input_Preview_Injection",
    "windows/UI_Input_Spatial",
    "windows/UI_Notifications",
    "windows/UI_Notifications_Management",
    "windows/UI_Popups",
    "windows/UI_Shell",
    "windows/UI_StartScreen",
    "windows/UI_Text",
    "windows/UI_Text_Core",
    "windows/UI_UIAutomation",
    "windows/UI_UIAutomation_Core",
    "windows/UI_ViewManagement",
    "windows/UI_ViewManagement_Core",
    "windows/UI_WebUI",
    "windows/UI_WebUI_Core",
    "windows/UI_WindowManagement",
    "windows/UI_WindowManagement_Preview",
    "windows/UI_Xaml",
    "windows/UI_Xaml_Automation",
    "windows/UI_Xaml_Automation_Peers",
    "windows/UI_Xaml_Automation_Provider",
    "windows/UI_Xaml_Automation_Text",
    "windows/UI_Xaml_Controls",
    "windows/UI_Xaml_Controls_Maps",
    "windows/UI_Xaml_Controls_Primitives",
    "windows/UI_Xaml_Core",
    "windows/UI_Xaml_Core_Direct",
    "windows/UI_Xaml_Data",
    "windows/UI_Xaml_Documents",
    "windows/UI_Xaml_Hosting",
    "windows/UI_Xaml_Input",
    "windows/UI_Xaml_Interop",
    "windows/UI_Xaml_Markup",
    "windows/UI_Xaml_Media",
    "windows/UI_Xaml_Media_Animation",
    "windows/UI_Xaml_Media_Imaging",
    "windows/UI_Xaml_Media_Media3D",
    "windows/UI_Xaml_Navigation",
    "windows/UI_Xaml_Printing",
    "windows/UI_Xaml_Resources",
    "windows/UI_Xaml_Shapes",
    "windows/Web",
    "windows/Web_AtomPub",
    "windows/Web_Http",
    "windows/Web_Http_Diagnostics",
    "windows/Web_Http_Filters",
    "windows/Web_Http_Headers",
    "windows/Web_Syndication",
    "windows/Web_UI",
    "windows/Web_UI_Interop",
    "windows/Win32",
    "windows/Win32_AI",
    "windows/Win32_AI_MachineLearning",
    "windows/Win32_AI_MachineLearning_DirectML",
    "windows/Win32_AI_MachineLearning_WinML",
    "windows/Win32_Data",
    "windows/Win32_Data_HtmlHelp",
    "windows/Win32_Data_RightsManagement",
    "windows/Win32_Data_Xml",
    "windows/Win32_Data_Xml_MsXml",
    "windows/Win32_Data_Xml_XmlLite",
    "windows/Win32_Devices",
    "windows/Win32_Devices_AllJoyn",
    "windows/Win32_Devices_BiometricFramework",
    "windows/Win32_Devices_Bluetooth",
    "windows/Win32_Devices_Communication",
    "windows/Win32_Devices_DeviceAccess",
    "windows/Win32_Devices_DeviceAndDriverInstallation",
    "windows/Win32_Devices_DeviceQuery",
    "windows/Win32_Devices_Display",
    "windows/Win32_Devices_Enumeration",
    "windows/Win32_Devices_Enumeration_Pnp",
    "windows/Win32_Devices_Fax",
    "windows/Win32_Devices_FunctionDiscovery",
    "windows/Win32_Devices_Geolocation",
    "windows/Win32_Devices_HumanInterfaceDevice",
    "windows/Win32_Devices_ImageAcquisition",
    "windows/Win32_Devices_PortableDevices",
    "windows/Win32_Devices_Properties",
    "windows/Win32_Devices_Pwm",
    "windows/Win32_Devices_Sensors",
    "windows/Win32_Devices_SerialCommunication",
    "windows/Win32_Devices_Tapi",
    "windows/Win32_Devices_Usb",
    "windows/Win32_Devices_WebServicesOnDevices",
    "windows/Win32_Foundation",
    "windows/Win32_Gaming",
    "windows/Win32_Globalization",
    "windows/Win32_Graphics",
    "windows/Win32_Graphics_CompositionSwapchain",
    "windows/Win32_Graphics_DXCore",
    "windows/Win32_Graphics_Direct2D",
    "windows/Win32_Graphics_Direct2D_Common",
    "windows/Win32_Graphics_Direct3D",
    "windows/Win32_Graphics_Direct3D_Dxc",
    "windows/Win32_Graphics_Direct3D_Fxc",
    "windows/Win32_Graphics_Direct3D10",
    "windows/Win32_Graphics_Direct3D11",
    "windows/Win32_Graphics_Direct3D11on12",
    "windows/Win32_Graphics_Direct3D12",
    "windows/Win32_Graphics_Direct3D9",
    "windows/Win32_Graphics_Direct3D9on12",
    "windows/Win32_Graphics_DirectComposition",
    "windows/Win32_Graphics_DirectDraw",
    "windows/Win32_Graphics_DirectManipulation",
    "windows/Win32_Graphics_DirectWrite",
    "windows/Win32_Graphics_Dwm",
    "windows/Win32_Graphics_Dxgi",
    "windows/Win32_Graphics_Dxgi_Common",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_Graphics_Hlsl",
    "windows/Win32_Graphics_Imaging",
    "windows/Win32_Graphics_Imaging_D2D",
    "windows/Win32_Graphics_OpenGL",
    "windows/Win32_Graphics_Printing",
    "windows/Win32_Graphics_Printing_PrintTicket",
    "windows/Win32_Management",
    "windows/Win32_Management_MobileDeviceManagementRegistration",
    "windows/Win32_Media",
    "windows/Win32_Media_Audio",
    "windows/Win32_Media_Audio_Apo",
    "windows/Win32_Media_Audio_DirectMusic",
    "windows/Win32_Media_Audio_DirectSound",
    "windows/Win32_Media_Audio_Endpoints",
    "windows/Win32_Media_Audio_XAudio2",
    "windows/Win32_Media_DeviceManager",
    "windows/Win32_Media_DirectShow",
    "windows/Win32_Media_DirectShow_Xml",
    "windows/Win32_Media_DxMediaObjects",
    "windows/Win32_Media_KernelStreaming",
    "windows/Win32_Media_LibrarySharingServices",
    "windows/Win32_Media_MediaFoundation",
    "windows/Win32_Media_MediaPlayer",
    "windows/Win32_Media_Multimedia",
    "windows/Win32_Media_PictureAcquisition",
    "windows/Win32_Media_Speech",
    "windows/Win32_Media_Streaming",
    "windows/Win32_Media_WindowsMediaFormat",
    "windows/Win32_NetworkManagement",
    "windows/Win32_NetworkManagement_Dhcp",
    "windows/Win32_NetworkManagement_Dns",
    "windows/Win32_NetworkManagement_InternetConnectionWizard",
    "windows/Win32_NetworkManagement_IpHelper",
    "windows/Win32_NetworkManagement_MobileBroadband",
    "windows/Win32_NetworkManagement_Multicast",
    "windows/Win32_NetworkManagement_Ndis",
    "windows/Win32_NetworkManagement_NetBios",
    "windows/Win32_NetworkManagement_NetManagement",
    "windows/Win32_NetworkManagement_NetShell",
    "windows/Win32_NetworkManagement_NetworkDiagnosticsFramework",
    "windows/Win32_NetworkManagement_NetworkPolicyServer",
    "windows/Win32_NetworkManagement_P2P",
    "windows/Win32_NetworkManagement_QoS",
    "windows/Win32_NetworkManagement_Rras",
    "windows/Win32_NetworkManagement_Snmp",
    "windows/Win32_NetworkManagement_WNet",
    "windows/Win32_NetworkManagement_WebDav",
    "windows/Win32_NetworkManagement_WiFi",
    "windows/Win32_NetworkManagement_WindowsConnectNow",
    "windows/Win32_NetworkManagement_WindowsConnectionManager",
    "windows/Win32_NetworkManagement_WindowsFilteringPlatform",
    "windows/Win32_NetworkManagement_WindowsFirewall",
    "windows/Win32_NetworkManagement_WindowsNetworkVirtualization",
    "windows/Win32_Networking",
    "windows/Win32_Networking_ActiveDirectory",
    "windows/Win32_Networking_BackgroundIntelligentTransferService",
    "windows/Win32_Networking_Clustering",
    "windows/Win32_Networking_HttpServer",
    "windows/Win32_Networking_Ldap",
    "windows/Win32_Networking_NetworkListManager",
    "windows/Win32_Networking_RemoteDifferentialCompression",
    "windows/Win32_Networking_WebSocket",
    "windows/Win32_Networking_WinHttp",
    "windows/Win32_Networking_WinInet",
    "windows/Win32_Networking_WinSock",
    "windows/Win32_Networking_WindowsWebServices",
    "windows/Win32_Security",
    "windows/Win32_Security_AppLocker",
    "windows/Win32_Security_Authentication",
    "windows/Win32_Security_Authentication_Identity",
    "windows/Win32_Security_Authentication_Identity_Provider",
    "windows/Win32_Security_Authorization",
    "windows/Win32_Security_Authorization_UI",
    "windows/Win32_Security_ConfigurationSnapin",
    "windows/Win32_Security_Credentials",
    "windows/Win32_Security_Cryptography",
    "windows/Win32_Security_Cryptography_Catalog",
    "windows/Win32_Security_Cryptography_Certificates",
    "windows/Win32_Security_Cryptography_Sip",
    "windows/Win32_Security_Cryptography_UI",
    "windows/Win32_Security_DiagnosticDataQuery",
    "windows/Win32_Security_DirectoryServices",
    "windows/Win32_Security_EnterpriseData",
    "windows/Win32_Security_ExtensibleAuthenticationProtocol",
    "windows/Win32_Security_Isolation",
    "windows/Win32_Security_LicenseProtection",
    "windows/Win32_Security_NetworkAccessProtection",
    "windows/Win32_Security_Tpm",
    "windows/Win32_Security_WinTrust",
    "windows/Win32_Security_WinWlx",
    "windows/Win32_Storage",
    "windows/Win32_Storage_Cabinets",
    "windows/Win32_Storage_CloudFilters",
    "windows/Win32_Storage_Compression",
    "windows/Win32_Storage_DataDeduplication",
    "windows/Win32_Storage_DistributedFileSystem",
    "windows/Win32_Storage_EnhancedStorage",
    "windows/Win32_Storage_FileHistory",
    "windows/Win32_Storage_FileServerResourceManager",
    "windows/Win32_Storage_FileSystem",
    "windows/Win32_Storage_Imapi",
    "windows/Win32_Storage_IndexServer",
    "windows/Win32_Storage_InstallableFileSystems",
    "windows/Win32_Storage_IscsiDisc",
    "windows/Win32_Storage_Jet",
    "windows/Win32_Storage_OfflineFiles",
    "windows/Win32_Storage_OperationRecorder",
    "windows/Win32_Storage_Packaging",
    "windows/Win32_Storage_Packaging_Appx",
    "windows/Win32_Storage_Packaging_Opc",
    "windows/Win32_Storage_ProjectedFileSystem",
    "windows/Win32_Storage_StructuredStorage",
    "windows/Win32_Storage_Vhd",
    "windows/Win32_Storage_VirtualDiskService",
    "windows/Win32_Storage_Vss",
    "windows/Win32_Storage_Xps",
    "windows/Win32_Storage_Xps_Printing",
    "windows/Win32_System",
    "windows/Win32_System_AddressBook",
    "windows/Win32_System_Antimalware",
    "windows/Win32_System_ApplicationInstallationAndServicing",
    "windows/Win32_System_ApplicationVerifier",
    "windows/Win32_System_AssessmentTool",
    "windows/Win32_System_Com",
    "windows/Win32_System_Com_CallObj",
    "windows/Win32_System_Com_ChannelCredentials",
    "windows/Win32_System_Com_Events",
    "windows/Win32_System_Com_Marshal",
    "windows/Win32_System_Com_StructuredStorage",
    "windows/Win32_System_Com_UI",
    "windows/Win32_System_Com_Urlmon",
    "windows/Win32_System_ComponentServices",
    "windows/Win32_System_Console",
    "windows/Win32_System_Contacts",
    "windows/Win32_System_CorrelationVector",
    "windows/Win32_System_DataExchange",
    "windows/Win32_System_DeploymentServices",
    "windows/Win32_System_DesktopSharing",
    "windows/Win32_System_DeveloperLicensing",
    "windows/Win32_System_Diagnostics",
    "windows/Win32_System_Diagnostics_Ceip",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Diagnostics_Debug_WebApp",
    "windows/Win32_System_Diagnostics_Etw",
    "windows/Win32_System_Diagnostics_ProcessSnapshotting",
    "windows/Win32_System_Diagnostics_ToolHelp",
    "windows/Win32_System_DistributedTransactionCoordinator",
    "windows/Win32_System_Environment",
    "windows/Win32_System_ErrorReporting",
    "windows/Win32_System_EventCollector",
    "windows/Win32_System_EventLog",
    "windows/Win32_System_EventNotificationService",
    "windows/Win32_System_GroupPolicy",
    "windows/Win32_System_HostCompute",
    "windows/Win32_System_HostComputeNetwork",
    "windows/Win32_System_HostComputeSystem",
    "windows/Win32_System_Hypervisor",
    "windows/Win32_System_IO",
    "windows/Win32_System_Iis",
    "windows/Win32_System_Ioctl",
    "windows/Win32_System_JobObjects",
    "windows/Win32_System_Js",
    "windows/Win32_System_Kernel",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_System_Mailslots",
    "windows/Win32_System_Mapi",
    "windows/Win32_System_Memory",
    "windows/Win32_System_Memory_NonVolatile",
    "windows/Win32_System_MessageQueuing",
    "windows/Win32_System_MixedReality",
    "windows/Win32_System_Mmc",
    "windows/Win32_System_Ole",
    "windows/Win32_System_ParentalControls",
    "windows/Win32_System_PasswordManagement",
    "windows/Win32_System_Performance",
    "windows/Win32_System_Performance_HardwareCounterProfiling",
    "windows/Win32_System_Pipes",
    "windows/Win32_System_Power",
    "windows/Win32_System_ProcessStatus",
    "windows/Win32_System_RealTimeCommunications",
    "windows/Win32_System_Recovery",
    "windows/Win32_System_Registry",
    "windows/Win32_System_RemoteAssistance",
    "windows/Win32_System_RemoteDesktop",
    "windows/Win32_System_RemoteManagement",
    "windows/Win32_System_RestartManager",
    "windows/Win32_System_Restore",
    "windows/Win32_System_Rpc",
    "windows/Win32_System_Search",
    "windows/Win32_System_Search_Common",
    "windows/Win32_System_SecurityCenter",
    "windows/Win32_System_ServerBackup",
    "windows/Win32_System_Services",
    "windows/Win32_System_SettingsManagementInfrastructure",
    "windows/Win32_System_SetupAndMigration",
    "windows/Win32_System_Shutdown",
    "windows/Win32_System_SideShow",
    "windows/Win32_System_StationsAndDesktops",
    "windows/Win32_System_SubsystemForLinux",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_System_SystemServices",
    "windows/Win32_System_TaskScheduler",
    "windows/Win32_System_Threading",
    "windows/Win32_System_Time",
    "windows/Win32_System_TpmBaseServices",
    "windows/Win32_System_TransactionServer",
    "windows/Win32_System_UpdateAgent",
    "windows/Win32_System_UpdateAssessment",
    "windows/Win32_System_UserAccessLogging",
    "windows/Win32_System_VirtualDosMachines",
    "windows/Win32_System_WinRT",
    "windows/Win32_System_WinRT_AllJoyn",
    "windows/Win32_System_WinRT_Composition",
    "windows/Win32_System_WinRT_CoreInputView",
    "windows/Win32_System_WinRT_Direct3D11",
    "windows/Win32_System_WinRT_Display",
    "windows/Win32_System_WinRT_Graphics",
    "windows/Win32_System_WinRT_Graphics_Capture",
    "windows/Win32_System_WinRT_Graphics_Direct2D",
    "windows/Win32_System_WinRT_Graphics_Imaging",
    "windows/Win32_System_WinRT_Holographic",
    "windows/Win32_System_WinRT_Isolation",
    "windows/Win32_System_WinRT_ML",
    "windows/Win32_System_WinRT_Media",
    "windows/Win32_System_WinRT_Pdf",
    "windows/Win32_System_WinRT_Printing",
    "windows/Win32_System_WinRT_Shell",
    "windows/Win32_System_WinRT_Storage",
    "windows/Win32_System_WinRT_Xaml",
    "windows/Win32_System_WindowsProgramming",
    "windows/Win32_System_WindowsSync",
    "windows/Win32_System_Wmi",
    "windows/Win32_UI",
    "windows/Win32_UI_Accessibility",
    "windows/Win32_UI_Animation",
    "windows/Win32_UI_ColorSystem",
    "windows/Win32_UI_Controls",
    "windows/Win32_UI_Controls_Dialogs",
    "windows/Win32_UI_Controls_RichEdit",
    "windows/Win32_UI_HiDpi",
    "windows/Win32_UI_Input",
    "windows/Win32_UI_Input_Ime",
    "windows/Win32_UI_Input_Ink",
    "windows/Win32_UI_Input_KeyboardAndMouse",
    "windows/Win32_UI_Input_Pointer",
    "windows/Win32_UI_Input_Radial",
    "windows/Win32_UI_Input_Touch",
    "windows/Win32_UI_Input_XboxController",
    "windows/Win32_UI_InteractionContext",
    "windows/Win32_UI_LegacyWindowsEnvironmentFeatures",
    "windows/Win32_UI_Magnification",
    "windows/Win32_UI_Notifications",
    "windows/Win32_UI_Ribbon",
    "windows/Win32_UI_Shell",
    "windows/Win32_UI_Shell_Common",
    "windows/Win32_UI_Shell_PropertiesSystem",
    "windows/Win32_UI_TabletPC",
    "windows/Win32_UI_TextServices",
    "windows/Win32_UI_WindowsAndMessaging",
    "windows/Win32_UI_Wpf",
    "windows/Win32_UI_Xaml",
    "windows/Win32_UI_Xaml_Diagnostics",
    "windows/Win32_Web",
    "windows/Win32_Web_MsHtml",
]